package modelo;

/**
 * Interfaz que representa una pizza.
 */
public interface Pizza {
    String getDescription();
    double getCost();
}
